apps/medium-place/mastodon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure:8200
        vault.security.banzaicloud.io/vault-role: mastodon
      labels:
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/version: 3.5.2
        app.kubernetes.io/part-of: mastodon
    spec:
      serviceAccountName: mastodon
      containers:
        - name: mastodon-web
          image: tootsuite/mastodon:v3.5.2
          command:
            - bundle
            - exec
            - rails s -p 3000
          ports:
            - name: http
              protocol: TCP
              targetPort: 3000
              containerPort: 3000
        - name: mastodon-sidekiq
          image: tootsuite/mastodon:v3.5.2
          command:
            - bundle
            - exec
            - sidekiq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon-streaming
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure:8200
        vault.security.banzaicloud.io/vault-role: mastodon
      labels:
        app.kubernetes.io/name: mastodon-streaming
        app.kubernetes.io/version: 3.5.2
        app.kubernetes.io/part-of: mastodon
    spec:
      serviceAccountName: mastodon
      containers:
        - name: mastodon-streaming
          image: tootsuite/mastodon:v3.5.2
          command:
            - node
            - ./streaming
          ports:
            - name: http-ws
              protocol: TCP
              targetPort: 4000
              containerPort: 4000
