apps/medium-place/mastodon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon
spec:
  selector:
    app: mastodon
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
    - protocol: TCP
      port: 4000
      targetPort: 4000
