apps/medium-place/mastodon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  tls:
    - hosts:
        - piazza.medium.place
      secretName: piazza.medium.place-tls
  rules:
    - host: piazza.medium.place
      http:
        paths:
          - pathType: Prefix
            path: "/api/v1/streaming"
            backend:
              service:
                name: mastodon
                port:
                  number: 4000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mastodon
                port:
                  number: 3000
